--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -7,12 +7,15 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+      - name: Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
       - name: Install dependencies
         run: cd frontend | npm install
+      - name: Install amplify-cli
         run: cd frontend | npm install -g @aws-amplify/cli
+      - name: deploy
         run: cd frontend | amplify publish --yes
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.FRONTEND_AWS_ACCESS_KEY_ID }}
