--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -11,12 +11,18 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          
       - name: Install dependencies
         run: cd frontend | npm install
+        working-directory: frontend
+
       - name: Install amplify-cli
-        run: cd frontend | npm install -g @aws-amplify/cli
+        run: npm install -g @aws-amplify/cli
+        working-directory: frontend
+
       - name: deploy
-        run: cd frontend | amplify publish --yes
+        run: amplify publish --yes
+        working-directory: frontend
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.FRONTEND_AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.FRONTEND_AWS_SECRET_ACCESS_KEY }}
