--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -11,13 +11,17 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          
+
       - name: Install dependencies
         run: cd frontend | npm install
         working-directory: frontend
 
       - name: Install amplify-cli
         run: npm install -g @aws-amplify/cli
+        working-directory: frontend
+
+      - name: build
+        run: npm run build
         working-directory: frontend
 
       - name: deploy
