--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -16,6 +16,9 @@ jobs:
         run: cd frontend | npm install
         working-directory: frontend
 
+      - name: Pull Amplify environment
+        run: amplify pull --yes --envName test
+
       - name: Install amplify-cli
         run: npm install -g @aws-amplify/cli
         working-directory: frontend
