--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -40,8 +40,8 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-#amplify-do-not-edit-begin
-amplify/\#current-cloud-backend
+amplify-do-not-edit-begin
+#amplify/\#current-cloud-backend
 amplify/.config/local-*
 amplify/logs
 amplify/mock-data
