--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -31,6 +31,10 @@ jobs:
       - name: Pull Amplify environment
         run: amplify pull --yes --envName test
 
+      - name: ls
+        run : ls -la
+        working-directory: frontend
+
       - name: build
         run: npm run build
         working-directory: frontend
@@ -39,5 +43,5 @@ jobs:
         run: amplify publish --yes
         working-directory: frontend
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.FRONTEND_AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.FRONTEND_AWS_SECRET_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
