--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -27,12 +27,12 @@ jobs:
         run: npm run build
         working-directory: frontend
 
-      - name: Amplify Deploy
+      - name: Amplify Pull
         run: |
           npm install -g @aws-amplify/cli
           cd frontend
           amplify pull --yes --envName test  --appId d3bmjclj64fc20
 
       - name: Publish to Amplify Hosting
-        working-directory: ${{ env.FRONTEND_DIR }}
+        working-directory: frontend
         run: amplify publish --yes
