--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -41,12 +41,14 @@ yarn-error.log*
 next-env.d.ts
 
 amplify-do-not-edit-begin
-#amplify/\#current-cloud-backend
+
+#amplify-do-not-edit-begin
+amplify/\#current-cloud-backend
 amplify/.config/local-*
 amplify/logs
 amplify/mock-data
 amplify/mock-api-resources
-#amplify/backend/amplify-meta.json
+amplify/backend/amplify-meta.json
 amplify/backend/.temp
 build/
 dist/
