--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -27,10 +27,12 @@ jobs:
         run: npm run build
         working-directory: frontend
 
-      - name: Amplify install
+      - name: Amplify Pull
         run: |
           npm install -g @aws-amplify/cli
+          cd frontend
+          amplify pull --yes --envName stage  --appId d34txdnem3hqxu
 
       - name: Publish to Amplify Hosting
+        working-directory: ${{ env.FRONTEND_DIR }}
         run: amplify publish --yes
-        working-directory: frontend
