--- a/frontend/amplify/.config/project-config.json
+++ b/frontend/amplify/.config/project-config.json
@@ -1,15 +1,15 @@
 {
   "whyContinueWithGen1": "Prefer not to answer",
-  "projectName": "elearninggggg",
+  "projectName": "Elearnnnninnggg",
   "version": "3.1",
   "frontend": "javascript",
   "javascript": {
     "framework": "react",
     "config": {
-      "SourceDir": "frontend/app",
-      "DistributionDir": "frontend/out",
+      "SourceDir": "app",
+      "DistributionDir": "out",
       "BuildCommand": "npm run build",
-      "StartCommand": "npm run dev"
+      "StartCommand": "npm run start"
     }
   },
   "providers": [
