--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -22,34 +22,34 @@ jobs:
       id-token: write
       contents: read
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Setup AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/elearning-amplify-stage-Role
           aws-region: ${{ env.AWS_REGION }}
 
-      # - name: Checkout repository
-      #   uses: actions/checkout@v4
+      - name: Setup node.js 20
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
 
-      # - name: Setup node.js 20
-      #   uses: actions/setup-node@v4
-      #   with:
-      #     node-version: "20"
+      - name: Install frontend dependencies
+        run: npm install
+        working-directory: ${{ env.FRONTEND_DIR }}
 
-      # - name: Install frontend dependencies
-      #   run: npm install
-      #   working-directory: ${{ env.FRONTEND_DIR }}
+      - name: Build frontend application
+        run: npm run build
+        working-directory: ${{ env.FRONTEND_DIR }}
 
-      # - name: Build frontend application
-      #   run: npm run build
-      #   working-directory: ${{ env.FRONTEND_DIR }}
+      - name: Amplify Pull
+        run: |
+          npm install -g @aws-amplify/cli
+          cd ${{ env.FRONTEND_DIR }}
+          amplify pull --yes --envName ${{ env.AMPLIFY_ENV }}  --appId ${{ env.AMPLIFY_APP_ID }}
 
-      # - name: Amplify Pull
-      #   run: |
-      #     npm install -g @aws-amplify/cli
-      #     cd ${{ env.FRONTEND_DIR }}
-      #     amplify pull --yes --envName ${{ env.AMPLIFY_ENV }}  --appId ${{ env.AMPLIFY_APP_ID }}
-
-      # - name: Publish to amplify hosting
-      #   run: amplify publish --yes
-      #   working-directory: ${{ env.FRONTEND_DIR }}
+      - name: Publish to amplify hosting
+        run: amplify publish --yes
+        working-directory: ${{ env.FRONTEND_DIR }}
