--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -47,6 +47,8 @@ jobs:
       - name: Amplify Pull
         run: |
           npm install -g @aws-amplify/cli
+          ls -la
+          pwd
           cd ${{ env.FRONTEND_DIR }}
           amplify pull --yes --envName ${{ env.AMPLIFY_ENV }}  --appId ${{ env.AMPLIFY_APP_ID }}
         working-directory: ${{ env.FRONTEND_DIR }}
