--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -46,6 +46,7 @@ jobs:
 
       - name: Amplify Pull
         run: |
+          ls -la amplify
           npm install -g @aws-amplify/cli
           amplify pull --yes --envName ${{ env.AMPLIFY_ENV }}  --appId ${{ env.AMPLIFY_APP_ID }}
         working-directory: ${{ env.FRONTEND_DIR }}
