--- a/frontend/amplify/.config/project-config.json
+++ b/frontend/amplify/.config/project-config.json
@@ -1,6 +1,6 @@
 {
   "whyContinueWithGen1": "Prefer not to answer",
-  "projectName": "Eleleleel",
+  "projectName": "practiceAWS",
   "version": "3.1",
   "frontend": "javascript",
   "javascript": {
